--- a/.travis.yml
+++ b/.travis.yml
@@ -243,6 +243,16 @@ matrix:
     # #         - unixodbc-bin
     # #         - unixodbc-dev
 
+    - name: "Windows - MDAC - MSVC (Visual Studio 2017) - Debug"
+      os: windows
+      language: bash
+      env:
+        - BUILD_TYPE=Debug
+        - EXTERNAL_THIRD_PARTY=no
+        - PACKAGING=yes
+        - TESTING=yes
+        - STANDALONE_TESTS_ONLY=yes
+
     # - name: "macOS 10.14 - iODBC - AppleClang (Xcode 11.2) - RelWithDebInfo"
     #   os: osx
     #   osx_image: xcode11.2
@@ -334,23 +344,28 @@ install: |-
 
 .odbc_configure: &odbc_configure |-
   if [ "$TESTING" == "yes" ] && [ "$STANDALONE_TESTS_ONLY" != "yes" ]; then
-    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      ODBC_DRIVER_PATH=$BUILD_DIR/driver/libclickhouseodbc.so
-      ODBC_DRIVERW_PATH=$BUILD_DIR/driver/libclickhouseodbcw.so
-    elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      ODBC_DRIVER_PATH=$BUILD_DIR/driver/libclickhouseodbc.dylib
-      ODBC_DRIVERW_PATH=$BUILD_DIR/driver/libclickhouseodbcw.dylib
-    fi
+    if [ "$TRAVIS_OS_NAME" == "windows" ]; then
 
-    export ODBCSYSINI=$RUN_DIR
-    export ODBCINSTINI=.odbcinst.ini
-    export ODBCINI=$ODBCSYSINI/.odbc.ini
-    if [ "$ODBC_DRIVER_MANAGER" == "iodbc" ]; then
-      # Full path to a custom odbcinst.ini in ODBCINSTINI for iODBC.
-      export ODBCINSTINI=$ODBCSYSINI/$ODBCINSTINI
-    fi
+      # TODO
 
-    cat > $ODBCSYSINI/.odbcinst.ini <<-EOF
+    else
+      if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+        ODBC_DRIVER_PATH=$BUILD_DIR/driver/libclickhouseodbc.so
+        ODBC_DRIVERW_PATH=$BUILD_DIR/driver/libclickhouseodbcw.so
+      elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
+        ODBC_DRIVER_PATH=$BUILD_DIR/driver/libclickhouseodbc.dylib
+        ODBC_DRIVERW_PATH=$BUILD_DIR/driver/libclickhouseodbcw.dylib
+      fi
+
+      export ODBCSYSINI=$RUN_DIR
+      export ODBCINSTINI=.odbcinst.ini
+      export ODBCINI=$ODBCSYSINI/.odbc.ini
+      if [ "$ODBC_DRIVER_MANAGER" == "iodbc" ]; then
+        # Full path to a custom odbcinst.ini in ODBCINSTINI for iODBC.
+        export ODBCINSTINI=$ODBCSYSINI/$ODBCINSTINI
+      fi
+
+      cat > $ODBCSYSINI/.odbcinst.ini <<-EOF
   [ODBC]
   Trace     = yes
   TraceFile = ${RUN_DIR}/odbc-driver-manager-trace.log
@@ -370,7 +385,7 @@ install: |-
   UsageCount = 1
   EOF
 
-    cat > $ODBCSYSINI/.odbc.ini <<-EOF
+      cat > $ODBCSYSINI/.odbc.ini <<-EOF
   [ODBC]
   Trace     = yes
   TraceFile = ${RUN_DIR}/odbc-driver-manager-trace.log
@@ -395,6 +410,7 @@ install: |-
   DriverLog     = yes
   DriverLogFile = ${RUN_DIR}/clickhouse-odbc-driver-w.log
   EOF
+    fi
   fi
 
 .configure: &configure |-
