--- a/.travis.yml
+++ b/.travis.yml
@@ -328,7 +328,7 @@ install: |-
       pip install --user pyodbc
     fi
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-    choco install wixtoolset
+    choco install windows-sdk-10-version-1809-all wixtoolset
   fi
 
 .clickhouse_start: &clickhouse_start |-
