--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - SOURCE_DIR=$TRAVIS_BUILD_DIR
     - BUILD_DIR=$TRAVIS_BUILD_DIR/build
     - RUN_DIR=$TRAVIS_BUILD_DIR/run
-#   - CTEST_EXTRA_FLAGS="${CTEST_EXTRA_FLAGS:--VV}"
+    - CTEST_EXTRA_FLAGS="${CTEST_EXTRA_FLAGS:--VV}"
 
 matrix:
   include:
